k8s/my_bar_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-bar-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-bar-app-deployment
  template:
    metadata:
      labels:
        app: my-bar-app-deployment
    spec:
      containers:
        - name: my-bar-app-deployment
          image: danilmalkinnn/best_restaurants:latest
          ports:
            - containerPort: 8080
