k8s/bar-load-balanser.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app-service
spec:
  selector:
    app: my-bar-app-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
