k8s/nextcloudInKuber.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: nextcloud:27.1.3
          ports:
            - containerPort: 80
            - containerPort: 433
          volumeMounts:
            - name: config-vol
              mountPath: /DATA/AppData/nextcloud/var/www/html
---

apiVersion: v1
kind: Service
metadata:
  name: cloud-service
spec:
  selector:
    app: nextcloud
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16.2
          ports:
            - containerPort: 5432
---

apiVersion: v1
kind: Service
metadata:
  name: nextcloud-postgres-service
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: "cloud.dvmalkin.online"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloud-service
                port:
                  number: 8080
